corrected size of 2023 sponsors,text alignement and margin aranged, still working on 2024 sponsors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -193,3 +193,51 @@ body {
 .bubble:nth-child(6) {
   animation-delay: 1s;
 }
+
+
+/* Styles for the paragraph compoenent */
+
+.paragraph {
+  white-space:pre-line;
+  text-align: justify;
+  text-justify: inter-word;
+  font-family: 'Times New Roman', Times, serif;
+  padding: 2px;
+}
+
+/* Styles for the carousel */
+.carousel {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.item {
+  width: 100%;
+  height: auto;
+  /* display: block; */
+  flex-grow: 2;
+}
+
+.btn {
+  position: relative;
+  top: 50%;
+  transform: translateY(0);
+  font-size: 60px;
+  background: none;
+  border: none;
+  padding: 30px;
+  cursor: pointer;
+  color: gray;
+}
+
+#prev {
+  left: 10px;
+}
+
+#next {
+  right: 10px;
+}
